--- a/source/Roulette Bot.vcxproj.filters
+++ b/source/Roulette Bot.vcxproj.filters
@@ -41,14 +41,20 @@
     <ClCompile Include="mainwindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\temp\GeneratedFiles\Debug\moc_mainwindow.cpp">
+    <ClCompile Include="..\temp\GeneratedFiles\Debug\RouletteBot\moc_mainwindow.cpp">
       <Filter>Generated Files\Debug</Filter>
     </ClCompile>
-    <ClCompile Include="..\temp\GeneratedFiles\Release\moc_mainwindow.cpp">
+    <ClCompile Include="..\temp\GeneratedFiles\Release\RouletteBot\moc_mainwindow.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
-    <ClCompile Include="..\temp\GeneratedFiles\qrc_mainwindow.cpp">
+    <ClCompile Include="..\temp\GeneratedFiles\RouletteBot\qrc_mainwindow.cpp">
       <Filter>Generated Files</Filter>
+    </ClCompile>
+    <ClCompile Include="casinoplugins.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="casinomodel.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -63,8 +69,14 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\temp\GeneratedFiles\ui_mainwindow.h">
+    <ClInclude Include="..\temp\GeneratedFiles\RouletteBot\ui_mainwindow.h">
       <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="casinoplugins.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="casinomodel.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
