--- a/source/Roulette Bot.vcxproj.filters
+++ b/source/Roulette Bot.vcxproj.filters
@@ -56,6 +56,12 @@
     <ClCompile Include="casinomodel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\temp\GeneratedFiles\Debug\RouletteBot\moc_casinomodel.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\temp\GeneratedFiles\Release\RouletteBot\moc_casinomodel.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="mainwindow.h">
@@ -67,15 +73,15 @@
     <CustomBuild Include="mainwindow.qrc">
       <Filter>Resource Files</Filter>
     </CustomBuild>
+    <CustomBuild Include="casinomodel.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\temp\GeneratedFiles\RouletteBot\ui_mainwindow.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
     <ClInclude Include="casinoplugins.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="casinomodel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
