--- a/source/Roulette Bot.vcxproj.filters
+++ b/source/Roulette Bot.vcxproj.filters
@@ -62,6 +62,15 @@
     <ClCompile Include="..\temp\GeneratedFiles\Release\RouletteBot\moc_casinomodel.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="casinodialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\temp\GeneratedFiles\Debug\RouletteBot\moc_casinodialog.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\temp\GeneratedFiles\Release\RouletteBot\moc_casinodialog.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="mainwindow.h">
@@ -76,6 +85,12 @@
     <CustomBuild Include="casinomodel.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
+    <CustomBuild Include="casinodialog.ui">
+      <Filter>Generated Files\Form Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="casinodialog.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\temp\GeneratedFiles\RouletteBot\ui_mainwindow.h">
@@ -83,6 +98,9 @@
     </ClInclude>
     <ClInclude Include="casinoplugins.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\temp\GeneratedFiles\RouletteBot\ui_casinodialog.h">
+      <Filter>Generated Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
